<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_fenlei"
        android:orderInCategory="10"
        android:title="@string/action_fenlei"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_list"
        android:orderInCategory="20"
        android:title="@string/action_list"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_suoding"
        android:orderInCategory="30"
        android:title="@string/action_suoding"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_share"
        android:orderInCategory="40"
        android:title="@string/action_share"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_copy"
        android:orderInCategory="50"
        android:title="@string/action_copy"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_delete"
        android:orderInCategory="60"
        android:title="@string/action_delete"
        app:showAsAction="never"/>
</menu>