<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:elevation="4dp"
    android:background="@drawable/bg_shadow">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:onClick="addTask"
            android:background="?android:attr/selectableItemBackground"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/newtask"
                android:scaleType="fitCenter"
                android:layout_gravity="center_horizontal"
                />
            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="14dp"
                android:textColor="@color/task_text3"
                android:text="@string/newtask" />

        </LinearLayout>

        <LinearLayout
            android:background="?android:attr/selectableItemBackground"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/sendtask"
                android:scaleType="fitCenter"
                android:layout_gravity="center_horizontal"
                />
            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="14dp"
                android:textColor="@color/task_text3"
                android:text="@string/sendtask" />

        </LinearLayout>

        <LinearLayout
            android:background="?android:attr/selectableItemBackground"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/erweima"
                android:scaleType="fitCenter"
                android:layout_gravity="center_horizontal"
                />
            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="14dp"
                android:textColor="@color/task_text3"
                android:text="@string/erweima" />

        </LinearLayout>

    </LinearLayout>



</RelativeLayout>